# sfdata-stream-parser

./: .bumpversion.cfg  .coveragerc  README.md  pyproject.toml
.github/workflows/: linting.yml  tests.yml
sfdata_stream_parser/: checks.py  collectors.py  events.py  function_helpers.py  functions.py  stream.py  types.py
sfdata_stream_parser/filters/: column_headers.py  generic.py  types.py
sfdata_stream_parser/parser/: __init__.py  csv.py  openpyxl.py  xml.py
tests/: test_checks.py  test_collectors.py  test_events.py  test_functioncaller.py
tests/filters/: test_column_headers.py  test_decorator.py  test_generic_filter_stream.py  test_types.py
tests/parser/: test_csv.py  test_openpyxl.py  test_xml.py
tests/tools/: test_column_headers.py
