[tool.poetry]
name = "sfdata-stream-parser"
version = "0.1.0"
description = "Loosely inspired by the Streaming API for XML (StAX), this library provides a Python iterator interface for working with tabular documents."
authors = ["Kaj Siebert <kaj@k-si.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
more-itertools = "^8.12.0"
openpyxl = {version = "^3.0.9", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
coverage = "^6.3.1"

[tool.poetry.extras]
openpyxl = ["openpyxl"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
